--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-TWILIO_ACCOUNT_SID=ACfdf8468da1c19108afc3df657839a16e
-TWILIO_AUTH_TOKEN=141e905ef9e6fa378228988102146426
-TWILIO_PHONE_NUMBER=+14078716013
+TWILIO_ACCOUNT_SID=put here
+TWILIO_AUTH_TOKEN=put here
+TWILIO_PHONE_NUMBER=put here
